--- a/SectionOne/index.html
+++ b/SectionOne/index.html
@@ -4,22 +4,17 @@
     <meta charset="utf-8">
     <title>The Complete JavaScript Course</title>
   </head>
+
   <body>
-    <h1>JavaScript</h1>
-    <p><em>JavaScript is a lightweight, interpreted programming language.</em></p>
-    <ul>
-      <li>Somewhere to write your code</li>
-      <li>Someway to write your code</li>
-    </ul>
-    <p>No compiler needed you can start with the tools on your computer right now!</p>
-    <h2>Popular editing tools</h2>
-    <button onclick="alert('Clicked')">Click Here</button>
-    <ul>
-      <li>Brackets</li>
-      <li>Atom</li>
-      <li>Sublime Text</li>
-      <li>Dreamweaver</li>
-    </ul>
-    <script src="script.js" type="text/javascript"></script>
+
+    <script src="script.js" type="text/javascript">
+      console.log("hello world");
+      console.log(4 + 6);
+      console.error("error");
+      console.warn("warning message!");
+      console.log("%cHello World", "color:green");
+      console.log("%cHello World", "color:blue, background:black");
+    </script>
+
   </body>
 </html>
