--- a/SectionOne/index.html
+++ b/SectionOne/index.html
@@ -6,15 +6,14 @@
   </head>
 
   <body>
-
-    <script src="script.js" type="text/javascript">
-      console.log("hello world");
-      console.log(4 + 6);
-      console.error("error");
-      console.warn("warning message!");
-      console.log("%cHello World", "color:green");
-      console.log("%cHello World", "color:blue, background:black");
-    </script>
+    <h1>JavaScript</h1>
+    <ol>
+      <li>Create HTML and JS file</li>
+      <li>Add a Welcome Message that prints out the HTML</li>
+      <li>Have a popup say "Hello"</li>
+      <li>Output a message "It worked" into the console</li>
+    </ol>
+    <script src="script.js" type="text/javascript"></script>
 
   </body>
 </html>
